# qml-practices

./: .gitignore.ide  CMakeLists.txt  README.md
hello-qml/: CMakeLists.txt  main.cpp
qml-hello/: CMakeLists.txt  Hello.qml  main.cpp
qml_javascript_import/: CMakeLists.txt  Main.qml  README-EN.md  README.md  main.cpp
qml_javascript_inline/: CMakeLists.txt  Main.qml  README-EN.md  README.md  main.cpp
qml_javascript_singleton/: CMakeLists.txt  Main.qml  README-2.md  README-EN.md  README.md  main.cpp
qml_javascript_singleton/resources/javascripts/: color_utils.js
qml_javascript_singleton/resources/qml_utils/: color_utils.qml
qml_singleton_element/: CMakeLists.txt  Main.qml  README-EN.md  README.md  main.cpp
shared_utils/: CMakeLists.txt
shared_utils/color_utils/: CMakeLists.txt  color_utils.hpp
